Make benchmark JDK 1.4 compatible. Preconfigure Eclipse plugin to download sources.
git-svn-id: http://svn.codehaus.org/xstream/trunk@1249 9830eeb5-ddf4-0310-9ef7-f4b9a3e3227e